Fixed description on mobile summary page

--- a/src/styles/kidoju.widgets.markdown.less
+++ b/src/styles/kidoju.widgets.markdown.less
@@ -1,15 +1,10 @@
 .kj-markdown {
 
-    // Margins
-    p, h1, h2, h3, h4, h5, h6 {
-        margin-left: 0;
-        margin-right: 0;
-    }
-
     // Heading font
     h1, h2, h3, h4, h5, h6 {
         font-weight: bold;
     }
+
     // h1 { font-size: 2em; }
     h1 { font-size: 1.5em; }
     h2 { font-size: 1.17em; }
@@ -46,4 +41,17 @@
         vertical-align: middle;
     }
 
+}
+
+// Mobile
+.km-content {
+    .km-listview {
+        .kj-markdown {
+            // Margins
+            p, h1, h2, h3, h4, h5, h6 {
+                margin-left: 0;
+                margin-right: 0;
+            }
+        }
+    }
 }
